# auto-suggest-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: trie.hpp  trie_node.hpp
src/: main.cpp  trie.cpp
src/tests/: trie_tests.cpp
